discussion/kv_engine/162026/162026_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Trace - extra on expel - Toward no expelledItems copy

Change-Id: I2648082a92152979529a8da668e6ff1494a40135

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-24 13:47:03.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-24 13:50:47.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34375/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34375/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40389/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40389/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14434/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14434/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22706/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22706/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13580/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13580/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15221/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15221/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14695/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2492/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2492/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12824/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "C::expelItems");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:554:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::splice");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:567:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::open_and_mem");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:591:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::closed_or_disk");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12824/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12824/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2458/ : FAILURE

Compile error at [2021-09-24T13:50:06.016Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:715:40:
error: too few arguments to function call, expected 2, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2458/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11614/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
